assets/styles/layout.scss
/* ... */
.content-lower .section-app {
    border-bottom: 1px solid #d8ebd5;
    margin: 10px 0;
    padding: 10px 15px;
    width: 835px;
}

.content-lower .section-app-last {
    border-bottom: 0;
}

.content-lower .section-lower, .content-lower .section-lower-wide, .content-lower-alt .section-app-lower {
    padding-top: 150px;
}

.footer {
    clear: both;
}




/* @group Typography
--------------------------------------------- */
.container a {
    color: #267d18;
    text-decoration: none;
}

.container a:hover {
    text-decoration: underline;
}

.section p, .section ul, .section ol {
    font-size: 1.4em;
    line-height: 1.4286em;
    margin-bottom: 20px;
}

.section ul.half {
    display: inline;
    float: left;
    width: 260px;
    margin: 0 0 20px 20px;
    padding: 0;
}

.section ul ul {
    font-size: 1.0em;
    margin-bottom: 5px;
    margin-top: 5px;
}

.section h2 {
    color: #222;
    font-size: 2.6em;
    font-weight: bold;
    line-height: 1.5385em;
    margin-bottom: 20px;
}

.contact .section h2,
.single-column .section h2 {
    margin-top: 20px;
}

.section h2.speakapedia {
    background: url(../icons/speakapedia.png) left 50% no-repeat;
    padding-left: 50px;
}

.section h2.the-rag {
    background: url(../icons/the-rag.png) left 50% no-repeat;
    padding-left: 50px;
}

.section h2.charades {
    background: url(../icons/charades.png) left 50% no-repeat;
    padding-left: 50px;
}

.section h2.explore-flickr {
    background: url(../icons/explore-flickr.png) left 50% no-repeat;
    padding-left: 50px;
}

.section h3 {
    color: #267d18;
    clear: both;
    font-size: 1.8em;
    font-weight: bold;
    line-height: 1.111em;
    margin-bottom: 20px;
}

.section-app h3.balloons {
    background: url(../icons/balloons-small.png) left 50% no-repeat;
    line-height: 1.333em;
    padding-left: 35px;
}

.section-app h3.speakapedia {
    background: url(../icons/speakapedia-small.png) left 50% no-repeat;
    line-height: 1.333em;
    padding-left: 35px;
}

.section-app h3.the-rag {
    background: url(../icons/the-rag-small.png) left 50% no-repeat;
    line-height: 1.333em;
    padding-left: 35px;
}

.section-app h3.charades {
    background: url(../icons/charades-small.png) left 50% no-repeat;
    line-height: 1.333em;
    padding-left: 35px;
}

.section-app h3.explore-flickr {
    background: url(../icons/explore-flickr-small.png) left 50% no-repeat;
    line-height: 1.333em;
    padding-left: 35px;
}

.section h4 {
    color: #267d18;
    font-size: 1.4em;
    font-weight: bold;
    line-height: 1.4286em;
    margin-bottom: 5px;
}

.section p.excerpt {
    color: #333;
    font-size: 1.9em;
    line-height: 1.25em;
}

.section .terms {
    font-size: 10px;
    padding: 0 10px 10px 10px;
}

.section p.emphasis {
    font-weight: bold;
}

.subsection-booking {
    background: #e7f3e5;
    border: 1px solid #d8ebe5;
    display: inline;
    float: left;
    margin-bottom: 20px;
    padding: 15px 15px 5px 15px;
}

.subsection-booking .association {
    width: 190px;
    margin: 0 auto;
}

.subsection-booking .association img {
    padding: 5px 10px;
}

.footer ul {
    font-size: 1.1em;
    line-height: 1.8182em;
    list-style: none;
    margin: 0 0 20px 0;
    padding: 0;
    text-align: center;
}



.section ul.app-list {
    display: inline;
    float: left;
    list-style: none;
    margin: 0 0 20px 0;
    padding: 0;
    width: 265px;
}

.section ul.app-list li {
    display: inline;
    float: left;
    line-height: 30px;
    padding-left: 30px;
    width: 260px;
}

.section ul.app-list li.speakapedia {
    background: url(../icons/speakapedia-small.png) left 50% no-repeat;
}

.section ul.app-list li.the-rag {
    background: url(../icons/the-rag-small.png) left 50% no-repeat;
}

.section ul.app-list li.charades {
    background: url(../icons/charades-small.png) left 50% no-repeat;
}

.section ul.app-list li.explore-flickr {
    background: url(../icons/explore-flickr-small.png) left 50% no-repeat;
}

.section ul.app-list li.balloons {
    background: url(../images/whats-hot.png) top left no-repeat;
    display: inline;
    float: left;
    line-height: normal;
    height: 60px;
    margin: 0 0 10px 0;
    padding: 5px 0 0 85px;
}

.section ul.app-list li a {
    color: #000;
    font-weight: bold;
    text-decoration: none;
}

.section ul.app-list li a:hover {
    text-decoration: underline;
}

.section .overview li {
    margin-bottom: 10px;
}

.section p.fancy-link {
    clear: both;
    float: left;
    width: 100%;
}

.section-blog p.fancy-link {
    clear: both;
    float: right;
}

.section p.fancy-link a {
    background: #666 url(../images/button.png) right 50% repeat-x;
    color: #fff !important;
    display: inline-block;
    font-weight: bold !important;
    line-height: 2.1429em;
    margin: 5px 0 !important;
    padding: 0 35px 0 15px !important;
    text-decoration: none !important;
}

.section p.fancy-link a:hover { 
    background-color: #429334 !important; 
    color: #fff !important; 
    text-decoration: none !important;
}

.section-app p.fancy-link {
    margin-bottom: 40px;
}

.section p.fancy-link-top, .content-upper .section p.fancy-link, .section p.fancy-link-bottom {
    margin-bottom: 10px;
}

form.license-key input#customer_email {
    border: 1px solid #ccc;
    margin-bottom: 4px;
    padding: 6px;
}


form.license-key input#commit {
    clear: both;
}


/* @group Blog Styles
--------------------------------------------- */
.section-blog {
    display: inline;
    float: left;
    padding: 20px 35px 0 15px;
    width: 620px;
}

.section-blog h3 {
    margin-bottom: 5px;
}

.section-blog .article {
    border-bottom: 1px solid #e7f3e4;
    display: inline;
    float: left;
    margin: 0 0 20px 0;
    padding: 0 0 20px 0;
    width: 620px;
}

.section-blog-home,
.section-blog-home .article {
    border: 0;
    margin: 0;
    padding: 0;
    width: 395px;
}

.section-blog-home {
    @include medradius;
}
/* ... */

